fix: fixed hiding scrollbar on firefox

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -43,10 +43,12 @@ ol li {
 * {
   outline: none;
   box-sizing: border-box;
+  scrollbar-width: 0;
 }
 *::-webkit-scrollbar {
   display: none;
 }
+
 a {
   text-decoration: none;
 }
